<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView android:id="@+id/users_recyclerview"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingTop="8dp"
        android:clipToPadding="false"/>

    <ProgressBar
        android:id="@+id/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal" />

</FrameLayout>
