<resources>
    <string name="app_name">Randomco</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sort_name">by name</string>
    <string name="sort_gender">by gender</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search by name, surname or email</string>
</resources>
