...
    android:layout_height="wrap_content"
    android:minHeight="96dp"
    android:orientation="vertical"
    android:background="?selectableItemBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
...
